[gd_scene load_steps=4 format=3 uid="uid://c1oaylh32r500"]

[ext_resource type="Script" uid="uid://bx18q8lr32ei8" path="res://Scripts/UI/SettingsMenu.gd" id="1_3dd0e"]
[ext_resource type="Texture2D" uid="uid://cqx2208sneqm4" path="res://Assets/Art/UI/arrow.svg" id="2_l4xm8"]
[ext_resource type="Script" uid="uid://b4d236x1wwn5k" path="res://Scripts/UI/sliderIsStupid.gd" id="2_s8p8c"]

[node name="Settings" type="MarginContainer" node_paths=PackedStringArray("BrightnessSlider", "PerformanceButton", "SoundSlider")]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3dd0e")
BrightnessSlider = NodePath("HBoxContainer/VBoxContainer/VBoxContainer/BrightnessSlider")
PerformanceButton = NodePath("HBoxContainer/VBoxContainer/HBoxContainer/PerformanceButton")
SoundSlider = NodePath("soundSubMenu/HBoxContainer/VBoxContainer/MasterVolumeSlider")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 2
mouse_filter = 2
color = Color(0.262932, 0.262932, 0.262932, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 11.8
mouse_filter = 2

[node name="KeybindButton" type="Button" parent="HBoxContainer/VBoxContainer"]
z_index = 3
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 53
text = "Edit Keybinds"

[node name="SoundButton" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 46
action_mode = 0
text = "Sound Settings"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_vertical = 6
mouse_filter = 2

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(10, 40)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_font_sizes/normal_font_size = 34
text = "Efficiency Mode"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="PerformanceButton" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Turn On"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(140, 20)
layout_mode = 2
size_flags_horizontal = 4
text = "Game Brightness"
fit_content = true
scroll_active = false

[node name="BrightnessSlider" type="HSlider" parent="HBoxContainer/VBoxContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
value = 100.0
script = ExtResource("2_s8p8c")

[node name="BackButton" type="TextureButton" parent="."]
layout_mode = 2
action_mode = 0
texture_normal = ExtResource("2_l4xm8")

[node name="soundSubMenu" type="Control" parent="."]
visible = false
z_index = 8
layout_mode = 2
mouse_filter = 2

[node name="Background" type="ColorRect" parent="soundSubMenu"]
layout_mode = 0
offset_right = 1941.0
offset_bottom = 1117.0
mouse_filter = 2
color = Color(0.262745, 0.262745, 0.262745, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="soundSubMenu"]
layout_mode = 0
offset_right = 1933.0
offset_bottom = 1111.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="soundSubMenu/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
mouse_filter = 2
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="soundSubMenu/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(140, 20)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/normal_font_size = 36
text = "Overall Volume"
fit_content = true
scroll_active = false
scroll_following = true
autowrap_mode = 0

[node name="MasterVolumeSlider" type="HSlider" parent="soundSubMenu/HBoxContainer/VBoxContainer"]
layout_mode = 2
script = ExtResource("2_s8p8c")

[node name="BackButton" type="TextureButton" parent="soundSubMenu"]
z_index = 14
z_as_relative = false
layout_mode = 0
offset_left = 76.0
offset_top = 52.0
offset_right = 289.0
offset_bottom = 154.0
scale = Vector2(0.5, 0.5)
action_mode = 0
texture_normal = ExtResource("2_l4xm8")

[connection signal="changed" from="soundSubMenu/HBoxContainer/VBoxContainer/MasterVolumeSlider" to="." method="_master_volume_changed"]
